Remove model; replace String.formatted() with String.format(); convert records to classes